--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -5,10 +5,35 @@ permalink: /portfolio/
 author_profile: true
 ---
 
-<!-- {% include base_path %}
+{% include base_path %}
 
 
-{% for post in site.portfolio %}
+<!-- {% for post in site.portfolio %}
   {% include archive-single.html %}
 {% endfor %} -->
 
+<h2>
+    Codes based on exercises from the Applied Data Science with Python Specialization taught by the University of Michigan
+    <a class="icon fa fa-github-square" style="color:inherit;text-decoration:none" href="https://github.com/LuisAngelMendozaVelasco/Applied_Data_Science_with_Python_Specialization" target="_blank"></a>
+    <a class="icon fa fa-file-pdf-o" style="color:inherit;text-decoration:none" href="https://coursera.org/verify/specialization/YTFGH2E77Q9S" target="_blank"></a>
+</h2>
+
+<details>
+    <summary>See More</summary>
+    <ul>
+        <li><a href="./Applied_Data_Science_with_Python_Specialization/portfolio-1.html" target="_blank">Breast Cancer Wisconsin (Diagnostic)</a></li>
+        <p>Create a classifier that can help diagnose patients using the Breast Cancer Wisconsin (Diagnostic) Database.</p>
+
+        <li><a href="./Applied_Data_Science_with_Python_Specialization/portfolio-2.html" target="_blank">Mushroom classification</a></li>
+        <p>Train a model to predict whether or not a mushroom is poisonous using the UCI Mushroom Data Set.</p>
+
+        <li><a href="./Applied_Data_Science_with_Python_Specialization/portfolio-3.html" target="_blank">Credit Card Transactions Fraud Detection</a></li>
+        <p>Train several models and evaluate how effectively they predict instances of fraud using the Credit Card Transactions Fraud Detection Dataset.</p>
+
+        <li><a href="./Applied_Data_Science_with_Python_Specialization/portfolio-4.html" target="_blank">Blight violations in the city of Detroit</a></li>
+        <p>Predict whether a given blight ticket will be paid on time.</p>
+
+        <li><a href="./Applied_Data_Science_with_Python_Specialization/portfolio-5.html" target="_blank">Spam detection</a></li>
+        <p>Explore text message data and create models to predict if a message is spam or not.</p>
+    </ul>
+</details>
