--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -19,7 +19,7 @@ author_profile: true
 </h2>
 
 <details>
-    <summary>See More</summary>
+    <summary>Click here</summary>
     <ul>
         <li><a href="./Applied_Data_Science_with_Python_Specialization/portfolio-1.html" target="_blank">Breast Cancer Wisconsin (Diagnostic)</a></li>
         <p>Create a classifier that can help diagnose patients using the Breast Cancer Wisconsin (Diagnostic) Database.</p>
