--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -37,3 +37,17 @@ author_profile: true
         <p>Explore text message data and create models to predict if a message is spam or not.</p>
     </ul>
 </details>
+
+<h2>
+    Codes based on exercises from the Data Engineering Foundations Specialization taught by IBM Skills Network
+    <a class="icon fa fa-github-square" style="color:inherit;text-decoration:none" href="https://github.com/LuisAngelMendozaVelasco/Data_Engineering_Foundations_Specialization" target="_blank"></a>
+    <a class="icon fa fa-file-pdf-o" style="color:inherit;text-decoration:none" href="https://coursera.org/verify/specialization/469C7SK85RBL" target="_blank"></a>
+</h2>
+
+<details>
+    <summary>Click here</summary>
+    <ul>
+        <li><a href="./Data_Engineering_Foundations_Specialization/portfolio-1.html" target="_blank">Chicago datasets</a></li>
+        <p>Analyze real world datasets from the city of Chicago with SQL and Python.</p>
+    </ul>
+</details>
