--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -51,3 +51,64 @@ author_profile: true
         <p>Analyze real world datasets from the city of Chicago with SQL and Python.</p>
     </ul>
 </details>
+
+<h2>
+    Codes based on exercises from the Data Science Fundamentals with Python and SQL Specialization taught by IBM Skills Network
+    <a class="icon fa fa-github-square" style="color:inherit;text-decoration:none" href="https://github.com/LuisAngelMendozaVelasco/Data_Science_Fundamentals_with_Python_and_SQL_Specialization" target="_blank"></a>
+    <a class="icon fa fa-file-pdf-o" style="color:inherit;text-decoration:none" href="https://coursera.org/verify/specialization/EJHSRQ2P26TP" target="_blank"></a>
+</h2>
+
+<details>
+    <summary>Click here</summary>
+    <ul>
+        <li><a href="./Data_Science_Fundamentals_with_Python_and_SQL_Specialization/portfolio-1.html" target="_blank">Teaching ratings</a></li>
+        <p>Explore teaching ratings for professors with different characteristics and see if there are external influences on the teaching evaluation score.</p>
+    </ul>
+</details>
+
+<h2>
+    Codes based on exercises from the Deep Learning Specialization taught by DeepLearning.AI
+    <a class="icon fa fa-github-square" style="color:inherit;text-decoration:none" href="https://github.com/LuisAngelMendozaVelasco/Deep_Learning_Specialization" target="_blank"></a>
+    <a class="icon fa fa-file-pdf-o" style="color:inherit;text-decoration:none" href="https://coursera.org/verify/specialization/LA8BFTV3MKKE" target="_blank"></a>
+</h2>
+
+<details>
+    <summary>Click here</summary>
+    <ul>
+        <li><a href="./Deep_Learning_Specialization/portfolio-1.html" target="_blank">Cat/Non-Cat classifier</a></li>
+        <p>Create and compare a deep neural network and convolutional neural network fot cat recognition.</p>
+
+        <li><a href="./Deep_Learning_Specialization/portfolio-2.html" target="_blank">Finger signs</a></li>
+        <p>Build a convolutional neural network and train the ResNet50V2 architecture to classify a collection of 6 signs representing numbers from 0 to 5.</p>
+
+        <li><a href="./Deep_Learning_Specialization/portfolio-3.html" target="_blank">Alpaca recognition</a></li>
+        <p>Use transfer learning with a pre-trained MobileNetV2 to build an Alpaca/Not Alpaca classifier.</p>
+
+        <li><a href="./Deep_Learning_Specialization/portfolio-4.html" target="_blank">Car detection</a></li>
+        <p>Implement object detection for autonomous driving using the YOLO (You Only Look Once) object detection system.</p>
+
+        <li><a href="./Deep_Learning_Specialization/portfolio-5.html" target="_blank">Image segmentation</a></li>
+        <p>Build a U-Net (CNN for image segmentation) to predict a label for every pixel in an image from a self-driving dataset.</p>
+
+        <li><a href="./Deep_Learning_Specialization/portfolio-6.html" target="_blank">Face recognition</a></li>
+        <p>Build a face recognition system using a pre-trained FaceNet model.</p>
+
+        <li><a href="./Deep_Learning_Specialization/portfolio-7.html" target="_blank">Neural style transfer</a></li>
+        <p>Implement a Neural Style Transfer (NST) model to generate novel artistic images.</p>
+
+        <li><a href="./Deep_Learning_Specialization/portfolio-8.html" target="_blank">Writing like Shakespeare</a></li>
+        <p>Implement a Shakespeare poem generator using Long Short-Term Memory (LSTM) cells.</p>
+
+        <li><a href="./Deep_Learning_Specialization/portfolio-9.html" target="_blank">Jazz solo</a></li>
+        <p>Train a Long Short-Term Memory (LSTM) network to generate music.</p>
+
+        <li><a href="./Deep_Learning_Specialization/portfolio-10.html" target="_blank">Emojify</a></li>
+        <p>Build a Long Short-Term Memory (LSTM) model that takes word embeddings as input to predict the most appropriate emoji.</p>
+
+        <li><a href="./Deep_Learning_Specialization/portfolio-11.html" target="_blank">Neural Machine Translation</a></li>
+        <p>Build a Neural Machine Translation (NMT) model to translate human-readable dates into machine-readable dates.</p>
+
+        <li><a href="./Deep_Learning_Specialization/portfolio-12.html" target="_blank">Trigger word detection</a></li>
+        <p>Implement an algorithm for trigger word detection.</p>
+    </ul>
+</details>
