--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -21,20 +21,20 @@ author_profile: true
 <details>
     <summary>Click here</summary>
     <ul>
-        <li><a href="./Applied_Data_Science_with_Python_Specialization/portfolio-1.html" target="_blank">Breast Cancer Wisconsin (Diagnostic)</a></li>
-        <p>Create a classifier that can help diagnose patients using the Breast Cancer Wisconsin (Diagnostic) Database.</p>
+        <li><a href="./Applied_Data_Science_with_Python_Specialization/portfolio-1.html" target="_blank">Breast Cancer Diagnosis</a></li>
+        <p>Create a classifier that can help diagnose breast cancer.</p>
 
-        <li><a href="./Applied_Data_Science_with_Python_Specialization/portfolio-2.html" target="_blank">Mushroom classification</a></li>
-        <p>Train a model to predict whether or not a mushroom is poisonous using the UCI Mushroom Data Set.</p>
+        <li><a href="./Applied_Data_Science_with_Python_Specialization/portfolio-2.html" target="_blank">Poisonous Mushrooms</a></li>
+        <p>Train a model to predict whether or not a mushroom is poisonous.</p>
 
         <li><a href="./Applied_Data_Science_with_Python_Specialization/portfolio-3.html" target="_blank">Credit Card Transactions Fraud Detection</a></li>
-        <p>Train several models and evaluate how effectively they predict instances of fraud using the Credit Card Transactions Fraud Detection Dataset.</p>
+        <p>Train multiple models and evaluate how effectively they predict credit card transactions fraud.</p>
 
-        <li><a href="./Applied_Data_Science_with_Python_Specialization/portfolio-4.html" target="_blank">Blight violations in the city of Detroit</a></li>
+        <li><a href="./Applied_Data_Science_with_Python_Specialization/portfolio-4.html" target="_blank">Blight Violations in the City of Detroit</a></li>
         <p>Predict whether a given blight ticket will be paid on time.</p>
 
-        <li><a href="./Applied_Data_Science_with_Python_Specialization/portfolio-5.html" target="_blank">Spam detection</a></li>
-        <p>Explore text message data and create models to predict if a message is spam or not.</p>
+        <li><a href="./Applied_Data_Science_with_Python_Specialization/portfolio-5.html" target="_blank">Spam Detection</a></li>
+        <p>Train multiple classification models to predict if a message is spam or not.</p>
     </ul>
 </details>
 
@@ -47,8 +47,8 @@ author_profile: true
 <details>
     <summary>Click here</summary>
     <ul>
-        <li><a href="./Data_Engineering_Foundations_Specialization/portfolio-1.html" target="_blank">Chicago datasets</a></li>
-        <p>Analyze real world datasets from the city of Chicago with SQL and Python.</p>
+        <li><a href="./Data_Engineering_Foundations_Specialization/portfolio-1.html" target="_blank">Chicago Indicators</a></li>
+        <p>Analyze real-world datasets from the city of Chicago using SQLite and Python.</p>
     </ul>
 </details>
 
@@ -61,8 +61,8 @@ author_profile: true
 <details>
     <summary>Click here</summary>
     <ul>
-        <li><a href="./Data_Science_Fundamentals_with_Python_and_SQL_Specialization/portfolio-1.html" target="_blank">Teaching ratings</a></li>
-        <p>Explore teaching ratings for professors with different characteristics and see if there are external influences on the teaching evaluation score.</p>
+        <li><a href="./Data_Science_Fundamentals_with_Python_and_SQL_Specialization/portfolio-1.html" target="_blank">Teaching Ratings</a></li>
+        <p>Analyze teaching ratings of professors with different characteristics and see if there are external influences on the teaching evaluation score.</p>
     </ul>
 </details>
 
@@ -75,40 +75,40 @@ author_profile: true
 <details>
     <summary>Click here</summary>
     <ul>
-        <li><a href="./Deep_Learning_Specialization/portfolio-1.html" target="_blank">Cat/Non-Cat classifier</a></li>
-        <p>Create and compare a deep neural network and convolutional neural network fot cat recognition.</p>
+        <li><a href="./Deep_Learning_Specialization/portfolio-1.html" target="_blank">Cat Classifier</a></li>
+        <p>Train a Deep Neural Network and a Convolutional Neural Network for cat recognition.</p>
 
-        <li><a href="./Deep_Learning_Specialization/portfolio-2.html" target="_blank">Finger signs</a></li>
-        <p>Build a convolutional neural network and train the ResNet50V2 architecture to classify a collection of 6 signs representing numbers from 0 to 5.</p>
+        <li><a href="./Deep_Learning_Specialization/portfolio-2.html" target="_blank">Finger Signs</a></li>
+        <p>Train a Convolutional Neural Network and a Residual Neural Network to classify a collection of six finger signs representing numbers from 0 to 5.</p>
 
-        <li><a href="./Deep_Learning_Specialization/portfolio-3.html" target="_blank">Alpaca recognition</a></li>
-        <p>Use transfer learning with a pre-trained MobileNetV2 to build an Alpaca/Not Alpaca classifier.</p>
+        <li><a href="./Deep_Learning_Specialization/portfolio-3.html" target="_blank">Alpaca Recognition</a></li>
+        <p>Implement transfer learning using a pretrained Convolutional Neural Network to build an alpaca classifier.</p>
 
-        <li><a href="./Deep_Learning_Specialization/portfolio-4.html" target="_blank">Car detection</a></li>
-        <p>Implement object detection for autonomous driving using the YOLO (You Only Look Once) object detection system.</p>
+        <li><a href="./Deep_Learning_Specialization/portfolio-4.html" target="_blank">Car Detection</a></li>
+        <p>Implement object detection for autonomous driving using the "You Only Look Once" algorithm.</p>
 
-        <li><a href="./Deep_Learning_Specialization/portfolio-5.html" target="_blank">Image segmentation</a></li>
-        <p>Build a U-Net (CNN for image segmentation) to predict a label for every pixel in an image from a self-driving dataset.</p>
+        <li><a href="./Deep_Learning_Specialization/portfolio-5.html" target="_blank">Image Segmentation</a></li>
+        <p>Build a U-Net to predict a label for every pixel in an image from an autonomous driving dataset.</p>
 
-        <li><a href="./Deep_Learning_Specialization/portfolio-6.html" target="_blank">Face recognition</a></li>
-        <p>Build a face recognition system using a pre-trained FaceNet model.</p>
+        <li><a href="./Deep_Learning_Specialization/portfolio-6.html" target="_blank">Face Recognition</a></li>
+        <p>Build a facial recognition system using a pre-trained FaceNet model.</p>
 
-        <li><a href="./Deep_Learning_Specialization/portfolio-7.html" target="_blank">Neural style transfer</a></li>
-        <p>Implement a Neural Style Transfer (NST) model to generate novel artistic images.</p>
+        <li><a href="./Deep_Learning_Specialization/portfolio-7.html" target="_blank">Neural Style Transfer</a></li>
+        <p>Implement a Neural Style Transfer model to generate novel artistic images.</p>
 
         <li><a href="./Deep_Learning_Specialization/portfolio-8.html" target="_blank">Writing like Shakespeare</a></li>
-        <p>Implement a Shakespeare poem generator using Long Short-Term Memory (LSTM) cells.</p>
+        <p>Implement a Shakespeare poem generator using a Long Short-Term Memory network.</p>
 
-        <li><a href="./Deep_Learning_Specialization/portfolio-9.html" target="_blank">Jazz solo</a></li>
-        <p>Train a Long Short-Term Memory (LSTM) network to generate music.</p>
+        <li><a href="./Deep_Learning_Specialization/portfolio-9.html" target="_blank">Jazz Solo</a></li>
+        <p>Train a Long Short-Term Memory network to generate music.</p>
 
         <li><a href="./Deep_Learning_Specialization/portfolio-10.html" target="_blank">Emojify</a></li>
-        <p>Build a Long Short-Term Memory (LSTM) model that takes word embeddings as input to predict the most appropriate emoji.</p>
+        <p>Build a Long Short-Term Memory model that takes word embeddings as input to predict the most appropriate emoji.</p>
 
         <li><a href="./Deep_Learning_Specialization/portfolio-11.html" target="_blank">Neural Machine Translation</a></li>
-        <p>Build a Neural Machine Translation (NMT) model to translate human-readable dates into machine-readable dates.</p>
+        <p>Build a Neural Machine Translation model to translate human-readable dates into machine-readable dates.</p>
 
-        <li><a href="./Deep_Learning_Specialization/portfolio-12.html" target="_blank">Trigger word detection</a></li>
+        <li><a href="./Deep_Learning_Specialization/portfolio-12.html" target="_blank">Trigger Word Detection</a></li>
         <p>Implement an algorithm for trigger word detection.</p>
     </ul>
 </details>
