Update files to academicpages v0.8.3 release
https://github.com/academicpages/academicpages.github.io/tree/v0.8.3

--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -112,3 +112,83 @@ author_profile: true
         <p>Implement an algorithm for trigger word detection.</p>
     </ul>
 </details>
+
+<h2>
+    Codes based on exercises from the IBM AI Engineering Specialization taught by IBM Skills Network
+    <a class="icon fa fa-github-square" style="color:inherit;text-decoration:none" href="https://github.com/LuisAngelMendozaVelasco/IBM_AI_Engineering_Professional_Certificate" target="_blank"></a>
+    <a class="icon fa fa-file-pdf-o" style="color:inherit;text-decoration:none" href="https://coursera.org/verify/professional-cert/N4KKK5YLRW7V" target="_blank"></a>
+</h2>
+
+<details>
+    <summary>Click here</summary>
+    <ul>
+        <li><a href="./IBM_AI_Engineering/portfolio-1.html" target="_blank">CO2 Emissions</a></li>
+        <p>Implement Simple and Multiple Linear Regression to predict CO2 emissions from light-duty vehicles.</p>
+    </ul>
+    <ul>
+        <li><a href="./IBM_AI_Engineering/portfolio-2.html" target="_blank">Classification of Customers</a></li>
+        <p>Use *k*-Nearest Neighbors to classify customers into group memberships for a telecommunications provider.</p>
+    </ul>
+    <ul>
+        <li><a href="./IBM_AI_Engineering/portfolio-3.html" target="_blank">Medical Treatment</a></li>
+        <p>Build a Decision Tree classifier to find out which drug might be appropriate for a future patient with the same illness.</p>
+    </ul>
+    <ul>
+        <li><a href="./IBM_AI_Engineering/portfolio-4.html" target="_blank">Credit Card Transactions Fraud Detection</a></li>
+        <p>Build a model that predicts whether a credit card transaction is fraudulent or not on an imbalanced dataset.</p>
+    </ul>
+    <ul>
+        <li><a href="./IBM_AI_Engineering/portfolio-5.html" target="_blank">Price of Houses</a></li>
+        <p>Create a Decision Tree regressor that can predict the median price of houses for various areas of Boston.</p>
+    </ul>
+    <ul>
+        <li><a href="./IBM_AI_Engineering/portfolio-6.html" target="_blank">Taxi Tip</a></li>
+        <p>Train a regression model to predict the amount of a taxi tip.</p>
+    </ul>
+    <ul>
+        <li><a href="./IBM_AI_Engineering/portfolio-7.html" target="_blank">Customer Churn</a></li>
+        <p>Train a Logistic Regression classifier to predict customer churn for a telecom company.</p>
+    </ul>
+    <ul>
+        <li><a href="./IBM_AI_Engineering/portfolio-8.html" target="_blank">Tumor Classification</a></li>
+        <p>Build and train a model to classify human cells samples as benign or malignant.</p>
+    </ul>
+    <ul>
+        <li><a href="./IBM_AI_Engineering/portfolio-9.html" target="_blank">Iris Flower Species</a></li>
+        <p>Train a model using the classic iris dataset for multi-class classification.</p>
+    </ul>
+    <ul>
+        <li><a href="./IBM_AI_Engineering/portfolio-10.html" target="_blank">Customer Segmentation</a></li>
+        <p>Use *k*-Means Clustering for customer segmentation.</p>
+    </ul>
+    <ul>
+        <li><a href="./IBM_AI_Engineering/portfolio-11.html" target="_blank">Weather Forecast</a></li>
+        <p>Train multiple classification models to predict the weather forecast in Australia.</p>
+    </ul>
+    <ul>
+        <li><a href="./IBM_AI_Engineering/portfolio-12.html" target="_blank">Compressive Strength of Concrete</a></li>
+        <p>Build a regression model using Keras to predict the compressive strength of concrete.</p>
+    </ul>
+    <ul>
+        <li><a href="./IBM_AI_Engineering/portfolio-13.html" target="_blank">MNIST database</a></li>
+        <p>Build a Deep Neural Network and a Convolutional Neural Network to classify handwritten digits.</p>
+    </ul>
+    <ul>
+        <li><a href="./IBM_AI_Engineering/portfolio-14.html" target="_blank">Fashion MNIST database</a></li>
+        <p>Build a Deep Neural Network and a Convolutional Neural Network using Pytorch to classify fashion products.</p>
+    </ul>
+    <ul>
+        <li><a href="./IBM_AI_Engineering/portfolio-15.html" target="_blank">Real-Time Object Detection</a></li>
+        <p>Implement pedestrian detection using a pretrained Faster R-CNN model.</p>
+    </ul>
+    <ul>
+        <li><a href="./IBM_AI_Engineering/portfolio-16.html" target="_blank">Language Modelling</a></li>
+        <p>Create a Recurrent Neural Network focused on Language Modelling and reach low levels of perplexity on the Penn Treebank dataset.</p>
+    </ul>
+    <ul>
+        <li><a href="./IBM_AI_Engineering/portfolio-17.html" target="_blank">Data Reconstruction</a></li>
+        <p>Reconstruct an image using a Restricted Boltzmann Machine.</p>
+    </ul>
+</details>
+
+<!-- Modified by Luis Mendoza -->
