--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -127,7 +127,7 @@ author_profile: true
     </ul>
     <ul>
         <li><a href="./IBM_AI_Engineering/portfolio-2.html" target="_blank">Classification of Customers</a></li>
-        <p>Use *k*-Nearest Neighbors to classify customers into group memberships for a telecommunications provider.</p>
+        <p>Use <i>k</i>-Nearest Neighbors to classify customers into group memberships for a telecommunications provider.</p>
     </ul>
     <ul>
         <li><a href="./IBM_AI_Engineering/portfolio-3.html" target="_blank">Medical Treatment</a></li>
@@ -139,7 +139,7 @@ author_profile: true
     </ul>
     <ul>
         <li><a href="./IBM_AI_Engineering/portfolio-5.html" target="_blank">Price of Houses</a></li>
-        <p>Create a Decision Tree regressor that can predict the median price of houses for various areas of Boston.</p>
+        <p>Build a Decision Tree regressor that can predict the median price of houses for various areas of Boston.</p>
     </ul>
     <ul>
         <li><a href="./IBM_AI_Engineering/portfolio-6.html" target="_blank">Taxi Tip</a></li>
@@ -159,7 +159,7 @@ author_profile: true
     </ul>
     <ul>
         <li><a href="./IBM_AI_Engineering/portfolio-10.html" target="_blank">Customer Segmentation</a></li>
-        <p>Use *k*-Means Clustering for customer segmentation.</p>
+        <p>Use <i>k</i>-Means Clustering for customer segmentation.</p>
     </ul>
     <ul>
         <li><a href="./IBM_AI_Engineering/portfolio-11.html" target="_blank">Weather Forecast</a></li>
@@ -188,6 +188,14 @@ author_profile: true
     <ul>
         <li><a href="./IBM_AI_Engineering/portfolio-17.html" target="_blank">Data Reconstruction</a></li>
         <p>Reconstruct an image using a Restricted Boltzmann Machine.</p>
+    </ul>
+    <ul>
+        <li><a href="./IBM_AI_Engineering/portfolio-18.html" target="_blank">Autoencoder</a></li>
+        <p>Create a simple autoencoder for feature extraction, dimensionality reduction and reconstruction of images.</p>
+    </ul>
+    <ul>
+        <li><a href="./IBM_AI_Engineering/portfolio-19.html" target="_blank">Concrete Crack Detector</a></li>
+        <p>Leverage pre-trained models to build image classifiers to detect concrete with and without cracks.</p>
     </ul>
 </details>
 
