Update the academic pages template to v0.8.4

--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -5,6 +5,8 @@ permalink: /portfolio/
 author_profile: true
 ---
 
+<!-- Modified by https://github.com/LuisAngelMendozaVelasco -->
+
 {% include base_path %}
 
 
@@ -198,5 +200,3 @@ author_profile: true
         <p>Leverage pre-trained models to build image classifiers to detect concrete with and without cracks.</p>
     </ul>
 </details>
-
-<!-- Modified by Luis Mendoza -->
