--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -7,6 +7,8 @@ redirect_from:
   - /wordpress/blog-posts/
 ---
 
+<!-- Modified by https://github.com/LuisAngelMendozaVelasco -->
+
 <!-- {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
 {% for post in site.posts %}
@@ -17,5 +19,3 @@ redirect_from:
   {% endif %}
   {% include archive-single.html %}
 {% endfor %} -->
-
-<!-- Modified by Luis Mendoza -->
