--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,6 +5,8 @@ permalink: /publications/
 author_profile: true
 ---
 
+<!-- Modified by https://github.com/LuisAngelMendozaVelasco -->
+
 {% if site.author.googlescholar %}
   <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
 {% endif %}
@@ -35,5 +37,3 @@ author_profile: true
 {% for post in site.publications reversed %}
   {% include archive-single.html %}
 {% endfor %}
-
-<!-- Modified by Luis Mendoza -->
